Harden Supabase integrations for canvas, podcasts, research, and secrets

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -4,10 +4,13 @@ project_id = "ixkkrousepsiorwlaycp"
 verify_jwt = false
 
 [functions.podcast-generator]
-verify_jwt = false
+verify_jwt = true
+
+[functions.cerebras-stream]
+verify_jwt = true
 
 [functions.cerebras-research]
-verify_jwt = false
+verify_jwt = true
 
 [functions.venue-ai-search]
 verify_jwt = false
@@ -22,4 +25,7 @@ verify_jwt = true
 verify_jwt = true
 
 [functions.generate-event-asset]
+verify_jwt = true
+
+[functions.research-sessions]
 verify_jwt = true
