--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -7,7 +7,10 @@ verify_jwt = false
 verify_jwt = false
 
 [functions.cerebras-research]
-verify_jwt = false
+verify_jwt = true
+
+[functions.cerebras-stream]
+verify_jwt = true
 
 [functions.venue-ai-search]
 verify_jwt = false
@@ -22,4 +25,10 @@ verify_jwt = true
 verify_jwt = true
 
 [functions.generate-event-asset]
+verify_jwt = true
+
+[functions.research-sessions]
+verify_jwt = true
+
+[functions.manage-user-secrets]
 verify_jwt = true
