Add web3/rwa/x402 tools and schema

--- a/mcp/manifest.json
+++ b/mcp/manifest.json
@@ -11,6 +11,18 @@
     "storage_put",
     "wallet_create",
     "wallet_transfer",
+    "evm_wallet_create",
+    "evm_wallet_balance",
+    "evm_wallet_simulate",
+    "evm_wallet_send",
+    "evm_tx_status",
+    "defi_token_balance",
+    "defi_allowance",
+    "defi_approve",
+    "defi_swap_simulate",
+    "rwa_compliance_check",
+    "rwa_audit_append",
+    "x402_inference",
     "kb_search",
     "web_search"
   ],
